<resources>
    <string name="app_name">Sonification</string>
    <string name="title_home">Home</string>
    <string name="title_charts">Charts</string>
    <string name="title_map">Map</string>
    <string name="title_sounds">Sounds</string>

    <string name="thanks">Vielen Dank!</string>
    <string name="stop">Stop</string>
    <string name="poweroff">Herunterfahren</string>
    <string name="settings">Einstellungen</string>

    <string name="new_dataset">Neuer Datensatz</string>
    <string name="enter_name">Bitte geben Sie einen Namen ein.</string>
    <string name="add">Hinzufügen</string>
    <string name="abort">Abbrechen</string>

    <string name="dataset_removed_message">Dataset %s wurde gelöscht.</string>
    <string name="undo">Rückgängig</string>

    <string name="notification_content">Die Sonification App empfängt Daten im Hintergrund und trackt Ihre Position.</string>

    <!-- Preferences -->
    <string name="sonifcation_summary">Einstellungen zur Sonification</string>
    <string name="sonification_type">Art der Sonification</string>
    <string name="sliding_window">Sliding Window</string>
    <string name="frame">Concurrent Frames</string>
    <string name="percentage">Minmale Änderung</string>
    <string name="sample_size">Anzahl der Samples</string>

    <string name="active_sensors">Sensoren</string>
    <string name="sensors_summary">Von der App zu verarbeitende Sensoren</string>
    <string name="map_sensor_sound">Mapping zwischen Sensoren und Sounds</string>

    <string name="title_about">About</string>
    <string name="about_summary">Informationen zu Sonification</string>
    <string name="about_text">Diese App wurde im Rahmen des Multimedia-Projekts im WS18/19 am Lehrstuhl \"Human Centered Multimedia\" der Universität Augsburg erstellt.</string>
    <string name="team_info">Team:\nMerlin Albes, David Heim, Ralph Stuhler</string>
    <string name="supervisor_info">Betreuer:\nHannes Ritschel, Andreas Seiderer</string>

    <!-- Charts -->
    <string name="no_charts">Keine Charts aktiviert.</string>
    <string name="no_chart_data">Chart enthält keine Daten.</string>

    <!-- Gases -->
    <string name="pm">Feinstaub (kombiniert)</string>
    <string name="pm25">Feinstaub 2.5</string>
    <string name="pm10">Feinstaub 10</string>
    <string name="co">Kohlenmonoxid</string>
    <string name="nh3">Ammoniak</string>
    <string name="no2">Stickstoffdioxid</string>
    <string name="c2h5oh">Ethanol</string>
    <string name="h2">Wasserstoff</string>
    <string name="c4h10">Isobutan</string>
    <string name="ch4">Methan</string>
    <string name="c3h8">Propan</string>
    <string name="humidity">Luftfeuchtigkeit</string>
    <string name="pressure">Luftdruck</string>
    <string name="temperatureSHT">Temperatur (SHT)</string>
    <string name="temperatureBMP">Temperatur (BMP)</string>

    <!-- Maps marker delete -->
    <string name="confirm_sensordata_delete_title">Messdaten löschen</string>
    <string name="confirm_sensordata_delete_content">Wollen Sie diese Messdaten wirklich löschen?</string>
    <string name="delete_successful">Messdaten erfolgreich gelöscht!</string>

    <!-- Sounds -->
    <string name="bass">Bass</string>
    <string name="bell"> Bell</string>
    <string name="bow">Bow</string>
    <string name="harp">Harp</string>
    <string name="piano">Piano</string>
    <string name="sakura">Sakura</string>
    <string name="sax">Sax</string>
    <string name="violin">Violin</string>
</resources>