<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <MultiSelectListPreference
        android:key="sensors_preference"
        app:title="@string/active_sensors"
        android:summary="@string/sensors_description"
        android:icon="@drawable/ic_charts_black_24dp" />

    <Preference
        app:title="@string/title_sounds"
        android:icon="@drawable/music_note"
        app:summary="@string/map_sensor_sound"
        app:fragment="mupro.hcm.sonification.preferences.SoundsPreferencesFragment" />

    <Preference
        app:title="@string/title_about"
        android:icon="@drawable/information"
        app:summary="@string/about_summary"
        app:fragment="mupro.hcm.sonification.preferences.AboutPreferenceFragment" />
</PreferenceScreen>